# Agents-Simplified

./: README.md
aiagent-backend/: .env.local  .gitignore  Dockerfile  README.md  agent.db  constants.py  index.py  pyproject.toml
aiagent-backend/agent/: handle_agent_action.py  initialize_agent.py
aiagent-backend/agent/custom_actions/: __init__.py  get_price.py  oneinch_fusion_plus.py  pyth_abi.json  swap_tokens.py
aiagent-backend/agent/custom_actions/oneinch/: __init__.py  actions.py  client.py
aiagent-backend/agent/oneinch/: __init__.py  actions.py  client.py  test.py
aiagent-backend/agent/oneinch_actions/: __init__.py  actions.py  client.py
aiagent-backend/oneinch/: actions.py  client.py
aiagent-frontend/: package.json
aiagent-frontend/app/hooks/: useChat.ts  useGetNFTs.ts  useGetTokens.ts
oneinch_sdk_server/: README.md  bun.lockb  package.json  server.js
